--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/auth_db
-JWT_SECRET=your_jwt_secret_key_here
+MONGO_URI=mongodb+srv://farm:qaz000@farm.jq6vc.mongodb.net/?retryWrites=true&w=majority&appName=farm
+JWT_SECRET=jQHi6lZ3ks5SO92TV9geZ7uSing3HIV64vvLiADPi2g=
 BASE_URL=https://arshsensei.duckdns.org/
